--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 {% block content %}
   <div style = "width: 100%">
 <div class="jumbotron jumbotron-fluid">
-    <h1>Robocup Russia</h1>
+    <h1>RoboCup Russia Committee</h1>
     <p class="lead">Официальный сайт национального комитета RoboСup</p>
     </div>
 </div>
-
+<div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+        <div class="col-md-6 px-0">
+          <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
+          <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
+          <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+        </div>
+      </div>
 <div class="slider">
   	<div class="item">
         <img src="/static/img/1.jpg" alt="Первый слайд">
