--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <div style = "width: 100%">
 <div class="jumbotron jumbotron-fluid">
     <h1>RoboCup Russia Committee</h1>
+    <img src="/static/img/logo.png" width = "45px" height="45">
     <p class="lead">Официальный сайт национального комитета RoboСup</p>
     </div>
 </div>
